--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Pong Game</title>
+  <title>Pong 2 Jugadores</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
